--- a/ros2_modulo_control/Dockerfile.galactic
+++ b/ros2_modulo_control/Dockerfile.galactic
@@ -1,7 +1,6 @@
 ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-modulo
 ARG BASE_TAG=humble
 FROM ${BASE_IMAGE}:${BASE_TAG} as ros2-control-build
-USER ${USER}
 
 RUN mkdir -p ${ROS2_WORKSPACE}/src/ros2_control
 WORKDIR ${ROS2_WORKSPACE}/src/ros2_control
@@ -17,6 +16,7 @@ RUN git clone -b galactic --depth 1 https://github.com/ros2/rcl_interfaces.git
 RUN git clone -b galactic --depth 1 https://github.com/ros2/test_interface_files.git
 RUN git clone -b ros2 --depth 1 https://github.com/ros/angles.git
 
+WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
 
 
