--- a/ros2_modulo_control/Dockerfile.humble
+++ b/ros2_modulo_control/Dockerfile.humble
@@ -1,7 +1,6 @@
 ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-modulo
 ARG BASE_TAG=humble
 FROM ${BASE_IMAGE}:${BASE_TAG} as ros2-control-build
-USER ${USER}
 
 RUN mkdir -p ${ROS2_WORKSPACE}/src/ros2_control
 WORKDIR ${ROS2_WORKSPACE}/src/ros2_control
@@ -18,6 +17,7 @@ RUN git clone -b humble --depth 1 https://github.com/ros2/test_interface_files.g
 RUN git clone -b ros2 --depth 1 https://github.com/ros/angles.git
 RUN git clone -b ros2 --depth 1 https://github.com/ros-drivers/ackermann_msgs.git
 
+WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
 
 
