--- a/ros_control_libraries/Dockerfile
+++ b/ros_control_libraries/Dockerfile
@@ -1,27 +1,34 @@
 ARG BASE_IMAGE=ghcr.io/aica-technology/ros-ws
 ARG BASE_TAG=noetic
-FROM ${BASE_IMAGE}:${BASE_TAG}
+FROM ${BASE_IMAGE}:${BASE_TAG} as focal-fossa
 
-# install google dependencies
-COPY --from=ghcr.io/epfl-lasa/control-libraries/proto-dependencies:latest /usr/local/include/google /usr/local/include/google
-COPY --from=ghcr.io/epfl-lasa/control-libraries/proto-dependencies:latest /usr/local/lib/libproto* /usr/local/lib/
-COPY --from=ghcr.io/epfl-lasa/control-libraries/proto-dependencies:latest /usr/local/bin/protoc /usr/local/bin
+# install development dependencies and copy licenses
+COPY --from=ghcr.io/epfl-lasa/control-libraries/development-dependencies:20.04 /usr/local /tmp/local
+RUN sudo cp -R /tmp/local/* /usr/local && sudo rm -r /tmp/local
+COPY --from=ghcr.io/epfl-lasa/control-libraries/development-dependencies:20.04 \
+  /usr/share/doc/control-libraries/licenses /usr/share/doc/control-libraries/licenses
+
+
+FROM focal-fossa as control-libraries-build
+WORKDIR ${HOME}
+
 RUN sudo ldconfig
 
 ARG CL_BRANCH=main
-WORKDIR ${HOME}
 RUN git clone -b ${CL_BRANCH} --depth 1 https://github.com/epfl-lasa/control-libraries.git
 
 # install source
 RUN sudo ./control-libraries/source/install.sh -y
-ENV CMAKE_PREFIX_PATH=/opt/openrobots:${CMAKE_PREFIX_PATH}
+
 # install protocol
 RUN sudo ./control-libraries/protocol/install.sh -y
+
 # install python bindings
 RUN sudo pip3 install ./control-libraries/python
-RUN sudo rm -rf ./control-libraries
 
-RUN sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
+# clean image
+RUN sudo rm -rf ./control-libraries && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
 
-# Restore the key for robotpkg
-RUN sudo curl http://robotpkg.openrobots.org/packages/debian/robotpkg.key | sudo apt-key add -
+FROM ${BASE_IMAGE}:${BASE_TAG} as final
+RUN sudo rm -rf /usr/include/eigen3
+COPY --from=control-libraries-build /usr/ /usr/
