--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -1,8 +1,21 @@
 ARG BASE_TAG=noetic
-FROM ros:${BASE_TAG} as base-dependencies
+FROM ros:${BASE_TAG} as environment-variables
 ENV DEBIAN_FRONTEND=noninteractive
+ENV PIP_NO_CACHE_DIR 1
+ENV USER ros
+ENV HOME /home/${USER}
+ENV ROS_WORKSPACE /home/${USER}/ros_ws
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
 
-RUN apt-get update && apt-get install -y \
+
+FROM environment-variables as base-dependencies
+
+# disable suggested and recommended install
+RUN apt-config dump | grep -we Recommends -e Suggests | sed s/1/0/ \
+  | sudo tee /etc/apt/apt.conf.d/999norecommend
+
+# install base dependencies
+RUN apt-get update && apt-get install --no-install-recommends -y \
   curl \
   featherpad \
   gdb \
@@ -21,18 +34,12 @@ RUN apt-get update && apt-get install -y \
   software-properties-common \
   ssh \
   unzip \
+  wget \
   && rm -rf /var/lib/apt/lists/*
 
 RUN echo "Set disable_coredump false" >> /etc/sudo.conf
 
-# disable suggested and recommended install
-RUN apt-config dump | grep -we Recommends -e Suggests | sed s/1/0/ \
-  | sudo tee /etc/apt/apt.conf.d/999norecommend
-
-# disable pip caching
-ENV PIP_NO_CACHE_DIR=1
-
-# Configure sshd server settings
+# configure sshd server settings
 RUN ( \
     echo 'LogLevel DEBUG2'; \
     echo 'PubkeyAuthentication yes'; \
@@ -55,7 +62,7 @@ RUN usermod -a -G dialout ${USER}
 RUN echo "${USER} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/99_aptget
 RUN chmod 0440 /etc/sudoers.d/99_aptget && chown root:root /etc/sudoers.d/99_aptget
 
-# Configure sshd entrypoint to authorise the new user for ssh access and
+# configure sshd entrypoint to authorise the new user for ssh access and
 # optionally update UID and GID when invoking the container with the entrypoint script
 COPY ./config/sshd_entrypoint.sh /sshd_entrypoint.sh
 RUN chmod 744 /sshd_entrypoint.sh
@@ -65,7 +72,6 @@ USER ${USER}
 RUN mkdir -p ${ROS_WORKSPACE}/src
 WORKDIR ${ROS_WORKSPACE}
 RUN rosdep update
-ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; catkin_make"
 
 # create the credentials to be able to pull private repos using ssh
@@ -77,9 +83,10 @@ RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash; \
 source ${ROS_WORKSPACE}/devel/setup.bash" | cat - ${HOME}/.bashrc > tmp && mv tmp ${HOME}/.bashrc
 RUN echo "session required pam_limits.so" | tee --append /etc/pam.d/common-session > /dev/null
 
+
+FROM environment-variables as final
+COPY --from=base-workspace / /
+
 # start as ROS user
 USER ${USER}
 WORKDIR ${ROS_WORKSPACE}
-
-# Clean image
-RUN sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
