--- a/ros2_modulo/Dockerfile
+++ b/ros2_modulo/Dockerfile
@@ -4,7 +4,7 @@ FROM ${BASE_IMAGE}:${BASE_TAG} as modulo-build
 
 ARG MODULO_BRANCH=main
 WORKDIR /tmp
-RUN git clone -b ${MODULO_BRANCH} --depth 1 https://github.com/epfl-lasa/modulo.git
+RUN git clone -b ${MODULO_BRANCH} --depth 1 https://github.com/aica-technology/modulo.git
 
 # copy sources and build ROS workspace with user permissions
 RUN cp -r /tmp/modulo/source ${ROS2_WORKSPACE}/src/modulo
